--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/city.JPG" class="img-responsive" alt="">
+                        <img src="img/potfolio/city.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -139,7 +139,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/gun.JPG" class="img-responsive" alt="">
+                        <img src="img/portfolio/gun.jpg" class="img-responsive" alt="">
                     </a>
 					<a href="#download" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
