--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </div>
                         <img src="img/portfolio/gun.jpg" class="img-responsive" alt="">
                     </a>
-					<a href="#download" class="btn btn-circle page-scroll">
+					<a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
 					 
@@ -178,21 +178,25 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Escalate</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/airport.JPG" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This photo was taken at the<a href="http://diaconspiracyfiles.com/">Denver International Airport</a>. 
+							No other public transport terminal in the world has garnered more intrigue than Denver International Airport. 
+							A diverse litany of Internet theorists link DIA with subjects ranging from aliens, secret Masonic plots, Nazis, 
+							ancient indian burial grounds, underground bases, killer haunted sculptures and visionary/scary murals, to name a few.
+							</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Film:
+                                    <strong><a href="http://www.fujifilm.com/">Fujifilm</a>
+                                    </strong>
+                                </li>
+								<li>ISO:
+                                    <strong><a href="http://www.fujifilm.com/">400 35mm</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a href="">April 2013</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -215,21 +219,23 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Clouded</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cloud.JPG" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Prior to attending Arizona State University, I worked geotechnical construction with <a href="http://www.haywardbaker.com/">Hayward Baker</a>.
+							This photo was taken on my way to West Virginia to work on the famous <a href="http://www.wvencyclopedia.org/articles/2154">Great Bend Tunnel</a>.
+							</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Film:
+                                    <strong><a href="http://www.fujifilm.com/">Fujifilm</a>
+                                    </strong>
+                                </li>
+								<li>ISO:
+                                    <strong><a href="http://www.fujifilm.com/">200 35mm</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a href="">May 2013</a>
                                     </strong>
                                 </li>
                             </ul>
