--- a/index.html
+++ b/index.html
@@ -451,13 +451,12 @@
         </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
+    
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; Warnick Photography 2015</p>
         </div>
     </footer>
 
